tests/e2e/unary_complex_3b.error
Error: syntax error in story at line 3, column 5

3|    a = [not b, not 2] <= not t + t
          ^^^^^^^^^^^^^^

E0123: `List[boolean]` can't be compared with `int`
